fix(Front/Audio): Avoid layout shift on playing toggle

--- a/front/src/styles/transitions.scss
+++ b/front/src/styles/transitions.scss
@@ -20,3 +20,7 @@ $t: 120ms;
 @mixin transition-checkboxes {
   transition: background-color $t ease-in-out, opacity $t ease-in-out;
 }
+
+@mixin transition-vumeter {
+  transition: opacity $t ease-in-out;
+}
